test/tests/MutableImmutable.expected
MutableImmutable.panda:4:9: error: immutable class 'anonymous.MutableImmutable' cannot contain mutable field 'm' of type 'panda.core.MutableString'
1 error
