test/tests/MutableImmutable.panda
class MutableImmutable : Immutable {
    def s:String
    def i:Int
    def m:MutableString
}